[YTDB-558] Record episode for the as() label binding